unpackaged/main/default/objects/Transportation__c/Transportation__c.object-meta.xml
<CustomObject>
    <description>Table contenant les frais de transport</description>
    <label>Transportation</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>N°</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Transportation</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>