unpackaged/main/default/objects/Transportation__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Catégorie</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Zone A</fullName>
            </value>
            <value>
                <fullName>Zone B</fullName>
            </value>
            <value>
                <fullName>Zone C</fullName>
            </value>
            <value>
                <fullName>Parc</fullName>
            </value>
            <value>
                <fullName>&lt; 5 ans</fullName>
            </value>
            <value>
                <fullName>Parc (+ 5ans)</fullName>
            </value>
            <value>
                <fullName>Neuf (- 5ans)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>