unpackaged/main/default/objects/Transportation__c/fields/Frais_Transport__c.field-meta.xml
<CustomField>
    <fullName>Frais_Transport__c</fullName>
    <label>Frais de Transport</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>