unpackaged/main/default/objects/Transportation__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Transportation</relationshipLabel>
    <relationshipName>Transportation</relationshipName>
    <type>Lookup</type>
</CustomField>