unpackaged/main/default/objects/Transportation__c/fields/Sector__c.field-meta.xml
<CustomField>
    <fullName>Sector__c</fullName>
    <label>Secteur</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Forfait 7 jours</fullName>
            </value>
            <value>
                <fullName>Forfait 14 jours</fullName>
            </value>
            <value>
                <fullName>IDF</fullName>
            </value>
            <value>
                <fullName>France</fullName>
            </value>
            <value>
                <fullName>Région Nord / Normandie</fullName>
            </value>
            <value>
                <fullName>Région Bretagne / Pays de Loire</fullName>
            </value>
            <value>
                <fullName>Région Centre / Aquitaine / Midi Pyrénées</fullName>
            </value>
            <value>
                <fullName>Région Paca</fullName>
            </value>
            <value>
                <fullName>Région Est</fullName>
            </value>
            <value>
                <fullName>Région Rhônes Alpes</fullName>
            </value>
            <value>
                <fullName>Région Ile de France</fullName>
            </value>
            <value>
                <fullName>Corse</fullName>
            </value>
            <value>
                <fullName>Forfait 21 jours</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>