unpackaged/main/default/objects/Transportation__c/fields/Short_term__c.field-meta.xml
<CustomField>
    <fullName>Short_term__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Short term</label>
    <type>Checkbox</type>
</CustomField>