unpackaged/main/default/objects/Transportation__c/recordTypes/Client_Specifique.recordType-meta.xml
<RecordType>
    <fullName>Client_Specifique</fullName>
    <active>true</active>
    <label>Client Spécifique</label>
</RecordType>