unpackaged/main/default/objects/Transportation__c/recordTypes/Transport_Classique.recordType-meta.xml
<RecordType>
    <fullName>Transport_Classique</fullName>
    <active>true</active>
    <label>Transport Classique</label>
</RecordType>